# gscemu-fork

./: .gitignore  .gitmodules  README.md  env.py  main.py  pyproject.toml  requirements.txt  ruff.toml
.zed/: settings.json
docs/ref/: component_handler_template.py  componenthandler_multithread_example.py  componenthandler_singlethread_example.py  roadmap.txt
docs/reference/examples/: componenthandler_multithread_example.py  componenthandler_singlethread_example.py
fw/rom/: README.md  haven_C_source.rom  haven_decomp.rom  haven_no_hashcheck.rom
lib/: emulator_context.py  globalvars.py  helpers.py  logger.py  pindevice.py  threadutils.py  ucthread.py
src/: __init__.py
src/components/: crypto.py  flash.py  fuse.py  globalsec.py  keymgr.py  m3.py  timels.py  uart.py
src/emulators/haven/: emulator.py  hooks.py  init_utils.py  mmio_map.py  registers.py
src/haven/: __init__.py  c_fastlookup.py  emulator.py  endorsement_cert.py  fuse_registers.py  hooks.py  init_utils.py  mmio_map.py  pinmux_config.py
src/haven/components/: __init__.py  crypto.py  flash.py  fuse.py  globalsec.py  gpio.py  keymgr.py  m3.py  pinmux.py  pmu.py  sps.py  swdp.py  timels.py  trng.py  uart.py  usb.py
src/haven/components/regdefs/: __init__.py  fuse_registers.py  pinmux_registers.py  registers.py
src/haven/fw/: README.md
tests/: pinmux_test.py  test_uc_stop.py
tools/: rf.py
